<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepeatWordActivity">
    <include layout="@layout/activity_toolbar"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="6"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/activitiesToolbar"
        android:columnCount="1">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_row="0"
            android:layout_margin="@dimen/standard_cv_margin"
            app:cardCornerRadius="10dp"
            android:background="#C3B8B8"
            android:id="@+id/cv_to_day"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/standard_cv_padding"
                android:text="@string/today_reapead"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_row="1"
            android:layout_margin="@dimen/standard_cv_margin"
            app:cardCornerRadius="10dp"
            android:background="#C3B8B8"
            android:id="@+id/cv_last_day">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/standard_cv_padding"
                android:text="@string/lastday_reapead"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_row="2"
            android:layout_margin="@dimen/standard_cv_margin"
            app:cardCornerRadius="10dp"
            android:background="#C3B8B8"
            android:id="@+id/cv_this_week">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/standard_cv_padding"
                android:text="@string/this_week_reapead"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_row="3"
            android:layout_margin="@dimen/standard_cv_margin"
            app:cardCornerRadius="10dp"
            android:background="#C3B8B8"
            android:id="@+id/cv_last_week">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/standard_cv_padding"
                android:text="@string/last_week_reapead"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_row="4"
            android:layout_margin="@dimen/standard_cv_margin"
            app:cardCornerRadius="10dp"
            android:background="#C3B8B8"
            android:id="@+id/cv_this_month">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_cv_padding"
                android:gravity="center_horizontal"
                android:text="@string/this_month_reapead"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_row="5"
            android:layout_margin="@dimen/standard_cv_margin"
            app:cardCornerRadius="10dp"
            android:background="#C3B8B8"
            android:id="@+id/cv_last_month">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/standard_cv_padding"
                android:text="@string/last_month_reapead"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_row="5"
            android:layout_margin="@dimen/standard_cv_margin"
            app:cardCornerRadius="10dp"
            android:background="#C3B8B8"
            android:id="@+id/all_repeat">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/standard_cv_padding"
                android:text="@string/all_reapeat"/>
        </androidx.cardview.widget.CardView>


    </GridLayout>


</RelativeLayout>